# kakeya

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_PHASE1.md  CLAUDE_PHASE10.md  CLAUDE_PHASE11.md  CLAUDE_PHASE2.md  CLAUDE_PHASE3.md  CLAUDE_PHASE4.md  CLAUDE_PHASE5.md  CLAUDE_PHASE6.md  CLAUDE_PHASE7.md  CLAUDE_PHASE8.md  CLAUDE_PHASE9.md  CODEOWNERS  EVALUATION_COMPLETE.md  LICENSE  Makefile  PHASE10_REPORT.md  PHASE11_REPORT.md  PHASE1_COMPLETE.md  PHASE1_REPORT.md  PHASE2_COMPLETE.md  PHASE2_REPORT.md  PHASE2_SUMMARY.md  PHASE3_REPORT.md  PHASE4_REPORT.md  PHASE5_REPORT.md  PHASE6_REPORT.md  PHASE7_REPORT.md  PHASE8_REPORT.md  PHASE9_REPORT.md  PHASES_9_10_VERIFICATION_REPORT.md  README.md  REAL_EVALUATION_PLAN.md  SETUP_API_KEY.md  WEEK3_4_IMPLEMENTATION_SUMMARY.md  WEEK5_IMPLEMENTATION_SUMMARY.md
agent/: flk_canonical.py  requirements-eval.txt  requirements.txt
api/: openapi.yaml
backend/: Dockerfile  go.mod  go.sum
config/: eval_config.yaml
docs/: README.md  linkedin-message.md
figures/: conformal_summary_table.tex
formal/: canonical_signing.v  crr_idempotency.tla
infra/: compose-tests.yml
load/: baseline.js
results/: degeneracy_conformal_results.json  degeneracy_results.json  fever_conformal_results.json  fever_results.json  halueval_conformal_results.json  halueval_results.json  truthfulqa_conformal_results.json  truthfulqa_results.json
scripts/: analyze_ensemble_verification.py  analyze_ensemble_with_production_baselines.py  analyze_full_public_dataset.py  analyze_public_dataset.py  analyze_real_public_dataset.py  analyze_scale_sensitivity.py  md_to_pdf.py  (+34 more)
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  lib.rs  signing.rs
sdk/wasm/: Cargo.toml  README.md
sdk/wasm/src/: lib.rs
(+27899 files in other folders)
